<resources>
    <string name="app_name">App Nghe Nhac</string>
    <string name="rating_board">BXH Âm nhạc</string>
    <string name="arranged">Sắp xếp</string>
    <string name="home_label">Trang chủ\n</string>
    <string name="library_label">Thư viện\n</string>
    <string name="play_label">Phát nhạc</string>
    <string name="rating_label">Bảng xếp hạng</string>
    <string name="setting_label">Cài đặt\n</string>
    <string name="home_label_header">Trang chủ</string>
    <string name="helloworld">HelloWorld</string>
    <string name="Chuyentrang">Chuyentrang\n</string>
    <string name="ChuyenLichSu">Chuyen lich su</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="play">Phát nhạc</string>
    <string name="nhaplink">Nhập link phát nhạc</string>
    <string name="choiNhac">Chơi Nhạc</string>
    <string name="thuVien">Thư Viện</string>
    <string name="trangChu">Trang Chủ</string>
    <string name="bxh">Bảng Xếp Hạng</string>
    <string name="caiDat">Cài Đặt</string>
    <string name="title_activity_navication">NavicationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playList">Play List</string>
    <string name="favoriteMusicList">bài nhạc yêu thích</string>
    <string name="historyMusicList">Lịch sử nghe nhạc</string>
    <string name="CreatePlayList">Tạo mới PlayList</string>
    <string name="AddPlayList">Add Play List</string>
    <string name="AddMusic">Add Music</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dongy">Đồng ý</string>
    <string name="dangky">ĐĂNG KÝ</string>
    <string name="dangnhap">ĐĂNG NHẬP</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="phone">Số điện thoại</string>
    <string name="thoat">Thoát</string>
    <string name="email">Email</string>
    <string name="hoten">Họ và tên</string>
    <string name="addSong">Thêm nhạc vào playList</string>
    <string name="playListName">Tên PlayList :</string>
    <string name="CacbaiNhacCoThe">Các bài nhạc có thể thêm vào PlayList</string>
    <string name="deleteSong">Xóa bài hát</string>


</resources>