<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:title="@string/timkiem"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    </com.google.android.material.appbar.AppBarLayout>
    <EditText android:layout_width="394dp" android:layout_height="50dp"
              android:id="@+id/timkiem" tools:layout_editor_absoluteY="83dp" tools:layout_editor_absoluteX="8dp"
              android:hint="@string/nhaplink">

    </EditText>
    <Button android:layout_width="139dp" android:layout_height="47dp"
            android:id="@+id/btnplay" tools:layout_editor_absoluteY="158dp" tools:layout_editor_absoluteX="136dp"
            android:text="@string/play">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>