<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/pink"
    android:paddingLeft="@dimen/size16dp"
    android:paddingBottom="@dimen/size16dp"
    android:paddingRight="@dimen/size16dp"
    android:paddingTop="@dimen/size16dp"
    tools:context=".login_register.DangKyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lnKhungDangKy"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/size10dp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_marginEnd="@dimen/size10dp"
        android:layout_marginBottom="@dimen/size10dp"
        android:padding="@dimen/size10dp"
        android:text="@string/dangky"
        android:textSize="@dimen/size30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lnKhungDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/idFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_edittext"
            android:hint="@string/hoten"
            android:textColor="@color/black"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/baseline_account_circle_24"
            android:drawablePadding="@dimen/size10dp"
            />
        <EditText
            android:id="@+id/idEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_edittext"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/mail_24dp_fill0_wght400_grad0_opsz24"
            android:drawablePadding="@dimen/size10dp"
            />
        <EditText
            android:id="@+id/idPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_edittext"
            android:hint="@string/matkhau"
            android:textColor="@color/black"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/unlock"
            android:drawablePadding="@dimen/size10dp"
            android:password="true"
            />
        <EditText
            android:id="@+id/idConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_edittext"
            android:hint="@string/nhaplaimatkhau"
            android:textColor="@color/black"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/unlock"
            android:drawablePadding="@dimen/size10dp"
            android:password="true"
            />
        <RadioGroup
            android:id="@+id/idRGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/idNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nam"
                />
            <RadioButton
                android:id="@+id/idNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ"/>
        </RadioGroup>
        <EditText
            android:id="@+id/idBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_edittext"
            android:hint="@string/ngaysinh"
            android:textColor="@color/black"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/date"
            android:drawablePadding="@dimen/size10dp"

            />
        <EditText
            android:id="@+id/idPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_edittext"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/call_24dp_fill0_wght400_grad0_opsz24"
            android:drawablePadding="@dimen/size10dp"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDK"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/dangky"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="@dimen/size10dp"/>

    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idprogressbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elevation="@dimen/size10dp"
        android:visibility="gone"/>
</RelativeLayout>