<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/pink"
    tools:context=".login_register.DangNhapActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size30sp"
        android:text="@string/dangnhap"
        android:textColor="@color/orange_yello"
        android:layout_above="@+id/id_dangnhap"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size10dp"/>
    
    <LinearLayout
        android:id="@+id/id_dangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/t_dangnhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@drawable/radius_edittext"
            android:drawableLeft="@drawable/baseline_account_circle_24"
            android:hint="@string/email"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/grey"
            android:drawablePadding="@dimen/size10dp"/>

        <EditText
            android:id="@+id/t_matkhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@drawable/radius_edittext"
            android:drawableLeft="@drawable/unlock"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/matkhau"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/grey" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dongyDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dangnhap"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/white"
            android:layout_marginLeft="@dimen/size20dp"
            android:layout_marginRight="@dimen/size20dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/grey"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dangky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dangky"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/white"
            android:layout_marginLeft="@dimen/size20dp"
            android:layout_marginRight="@dimen/size20dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/grey_blue"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="QUÊN MẬT KHẨU"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/white"
            android:layout_marginLeft="@dimen/size20dp"
            android:layout_marginRight="@dimen/size20dp"
            android:background="@color/dark_grey"
            />
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idprogressbarDN"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elevation="@dimen/size10dp"
        android:visibility="gone"/>



</RelativeLayout>