<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@color/sky_blue">
    <ImageView android:layout_width="30dp" android:layout_height="0dp"
               android:id="@+id/home"
               android:src="@drawable/baseline_bookmark_24"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintHorizontal_bias="0.099" app:layout_constraintVertical_bias="0.0"

    >

    </ImageView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/home_label"
              android:text="@string/home_label"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.045"
              app:layout_constraintVertical_bias="0.591">

    </TextView>
    <ImageView android:layout_width="30dp" android:layout_height="0dp"
               android:id="@+id/library"
               android:src="@drawable/baseline_library_music_24"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintHorizontal_bias="0.271" app:layout_constraintVertical_bias="1.0"

    >

    </ImageView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/library_label"
              android:text="@string/library_label"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.252"
              app:layout_constraintVertical_bias="0.591">

    </TextView>
    <ImageView android:layout_width="30dp" android:layout_height="0dp"
               android:id="@+id/play"
               android:src="@drawable/baseline_play_arrow_24"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintHorizontal_bias="0.46" app:layout_constraintVertical_bias="0.0"

    >

    </ImageView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/play_label"
              android:text="@string/play_label"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.444"
              app:layout_constraintVertical_bias="0.577">

    </TextView>

    <ImageView android:layout_width="30dp" android:layout_height="0dp"
               android:id="@+id/rating"
               android:src="@drawable/baseline_auto_awesome_24"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintHorizontal_bias="0.711" app:layout_constraintVertical_bias="0.0"

    >

    </ImageView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/rating_label"
              android:text="@string/rating_label"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.739"
              app:layout_constraintVertical_bias="0.577">

    </TextView>
    <ImageView android:layout_width="30dp" android:layout_height="0dp"
               android:id="@+id/setting"
               android:src="@drawable/baseline_settings_24"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintHorizontal_bias="0.939" app:layout_constraintVertical_bias="0.0"

    >

    </ImageView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/setting_label"
              android:text="@string/setting_label"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.937"
              app:layout_constraintVertical_bias="0.591">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>